--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "browserify": "^9.0.3",
+    "coffeeify": "^1.0.0",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-nodeunit": "^0.4.1",
@@ -34,6 +35,6 @@
   },
   "scripts": {
     "test": "grunt",
-    "browser": "browserify index.coffee > browser.js"
+    "browser": "browserify -t coffeeify index.coffee > browser.js"
   }
 }
